# futu-mcp

./: .dockerignore  .env.docker  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  MCP_TOOLS_REFERENCE.md  QUICKSTART.md  README.md  antigravity-config-stdio.json  antigravity-config.json  docker-compose.yml  example_prompt.md  futu_mcp_bugs.md  main.py  pyproject.toml
mcp-config-examples/: README.md  antigravity-config.json  claude-desktop-config.json
src/futu_mcp/: __init__.py  config.py  futu_client.py  models.py  server.py
src/futu_mcp/tools/: __init__.py  account.py  market_data.py  market_info.py  trading.py  watchlist.py
tests/: test_converters.py  test_models.py  test_place_order.py
