[project]
name = "futu-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Futu trading platform - market data, trading, and account management"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Futu MCP Contributors"}
]
keywords = ["mcp", "futu", "trading", "stocks", "market-data", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "futu-api>=9.4.5408",
    "mcp>=1.22.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
futu-mcp-server = "futu_mcp.server:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
